# lxqt-panel

./: CMakeLists.txt
panel/resources/: panel.conf
plugin-backlight/: CMakeLists.txt  backlight.cpp  backlight.h  sliderdialog.cpp  sliderdialog.h
plugin-mainmenu/translations/: mainmenu_eu.ts
plugin-mount/translations/: mount_eu.ts
plugin-networkmonitor/translations/: networkmonitor_eu.ts
plugin-waylandtaskbar/: CMakeLists.txt  dbusappslistener.cpp  dbusappslistener.h  lxqtgrouppopup.cpp  lxqttaskbar.cpp  lxqttaskbar.h  lxqttaskbarplugin.cpp  lxqttaskbarplugin.h  lxqttaskbutton.cpp  lxqttaskbutton.h  lxqttaskgroup.cpp  lxqttaskgroup.h
plugin-waylandtaskbar/drivers/: CMakeLists.txt
plugin-waylandtaskbar/drivers/wayland_toplevel/: CMakeLists.txt
plugin-waylandtaskbar/drivers/wayland_toplevel/src/: dbus.c  dbus.h  main.c  manager.h  memory.h  wayland_window_actions.c  wayland_window_actions.h  window.c  window.h  windowlist.c  windowlist.h
plugin-waylandtaskbar/translations/: waylandtaskbar.desktop.yaml
